# weather-mcp-server

./: .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml  smithery.yaml
weather_mcp_server/: __init__.py  main.py
